# myOpenglWrapper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
.github/workflows/: compileCheck.yml
include/: CMakeLists.txt  buffer.hpp  frequentVerts.hpp  program.hpp  texture.hpp
src/: CMakeLists.txt  buffer.cpp  program.cpp  texture.cpp
tests/: CMakeLists.txt  bufferTest.cpp  openglTest.cpp  openglTest.hpp  programTest.cpp  textureTest.cpp
